--- a/pom.xml
+++ b/pom.xml
@@ -54,87 +54,37 @@
 
 
     <build>
+        <finalName>dev-sdk</finalName>
         <plugins>
-            <!-- jar打包插件:
-                 addClasspath:true会自动生成manifest.mf文件,并添加Class-Path,指定class-path的前缀
-                 注意:class-path标签值:需要手动将本地的jar包引入,并加上一个点,表示当前路径
-                 exclude:可以将配置文件从jar包中排除,但是文件夹依然存在(不知道怎么解决)
-             -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
                 <configuration>
+                    <descriptors>
+                        <descriptor>src/main/resources/assembly.xml</descriptor>
+                    </descriptors>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.satan.DevSdkApplication</mainClass>
                             <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.satan.DevSdkApplication</mainClass>
                         </manifest>
                         <manifestEntries>
                             <Class-Path>lib/tdh-core-1.0.1.jar .</Class-Path>
                         </manifestEntries>
                     </archive>
-                    <excludes>
-                        <exclude>config/*.*</exclude>
-                        <exclude>fxml/*.*</exclude>
-                        <exclude>images/*.*</exclude>
-                    </excludes>
                 </configuration>
-            </plugin>
-            <!-- 将resource目录下的资源copy到jar包同级目录下
-                ${project.build.directory}默认值是target目录
-             -->
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.2.0</version>
                 <executions>
                     <execution>
-                        <id>copy-resources</id>
+                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>copy-resources</goal>
+                            <goal>single</goal>
                         </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>src/main/resources</directory>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- 依赖管理插件, 将依赖复制到jar包同级下的lib目录中;
-            -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.2</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
     </build>
 </project>
