--- a/pom.xml
+++ b/pom.xml
@@ -44,47 +44,15 @@
         </dependency>
 
         <dependency>
-            <groupId>tdh-core</groupId>
-            <artifactId>tdh-core</artifactId>
+            <groupId>des-core</groupId>
+            <artifactId>des-core</artifactId>
             <version>1.0.1</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/tdh-core-1.0.1.jar</systemPath>
+            <systemPath>${project.basedir}/lib/des-core-1.0.1.jar</systemPath>
         </dependency>
     </dependencies>
 
-
     <build>
-        <finalName>dev-sdk</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.1</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/resources/assembly.xml</descriptor>
-                    </descriptors>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.satan.DevSdkApplication</mainClass>
-                        </manifest>
-                        <manifestEntries>
-                            <Class-Path>lib/tdh-core-1.0.1.jar .</Class-Path>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+
     </build>
 </project>
