--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,19 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/des-core-1.0.1.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
     </dependencies>
 
 
